index.html edited online with Bitbucket

--- a/templates/index.html
+++ b/templates/index.html
@@ -19,8 +19,7 @@
   </head>
   <body>
     <div class="container">
-      <h4>Welcome to Docker Container, This very simple Python App!!</h4>
-      <img src="{{url}}" />
+      <h4>Welcome to Docker Container, This is a very simple Python App!!</h4>
     </div>
   </body>
 </html>
