--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
   <head>
     <style type="text/css">
       body {
-        background: black;
+        background: purple;
         color: white;
       }
       div.container {
@@ -19,7 +19,7 @@
   </head>
   <body>
     <div class="container">
-      <h4>Welcome to Docker Container, This is a very simple Python App!!</h4>
+      <h4>Welcome to DXC RedRock Docker Container, The Python App build on Docker Image</h4>
     </div>
   </body>
 </html>
