--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
   <head>
     <style type="text/css">
       body {
-        background: purple;
+        background: #5F249F;
         color: white;
       }
       div.container {
