--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <div class="container">
-      <h4>Welcome to DXC RedRock Docker Container, The Python App build on Docker Image</h4>
+      <h4>Welcome to DXC RedRock Docker Container, The Python DjangoApp deployed using Docker Image</h4>
     </div>
   </body>
 </html>
