--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <div class="container">
-      <B>Welcome to DXC RedRock Docker Container, The Python DjangoApp deployed using Docker Image</B>
+      <B>Welcome to DXC RedRock Docker Container, The Python DjangoApp deployed using Docker Image and kick start container</B>
     </div>
   </body>
 </html>
